# Versta.Slimt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: main.cc
scripts/ci/android/: 02-build.sh
slimt/: Aligned.cc  Aligned.hh  Annotation.cc  Annotation.hh  Arena.cc  Arena.hh  Batcher.cc  Batcher.hh  CMakeLists.txt  Frontend.cc  Frontend.hh  Input.hh  Io.cc  Macros.hh  Model.cc  Model.hh  Modules.cc  Modules.hh  QMM.cc  QMM.hh  Request.cc  Request.hh  Response.hh  Shortlist.cc  Shortlist.hh  Simd.hh  Tensor.cc  Tensor.hh  TensorOps.cc  TensorOps.hh  TextProcessor.cc  TextProcessor.hh  Transformer.cc  Transformer.hh  Types.hh  Utils.cc  Utils.hh  Vocabulary.hh
slimt/qmm/: Ruy.inl.cc
slimt/simd/: avx2.h  neon.h  sse.h
src/: Aligned.cc  Aligned.hh  Annotation.cc  Annotation.hh  Arena.cc  Arena.hh  Batcher.cc  Batcher.hh  CMakeLists.txt  Cache.hh  Frontend.cc  Frontend.hh  Input.cc  Input.hh  Io.cc  Io.hh  Macros.hh  Model.cc  Model.hh  Modules.cc  Modules.hh  QMM.cc  QMM.hh  Request.cc  Request.hh  Response.cc  Response.hh  Shortlist.cc  Shortlist.hh  Simd.hh  Tensor.cc  Tensor.hh  TensorOps.cc  TensorOps.hh  TextProcessor.cc  TextProcessor.hh  Transformer.cc  Transformer.hh  Types.hh  Utils.cc  (+5 more)
src/qmm/: Ruy.inl.cc
src/simd/: neon.h  sse.h
